--- a/package.json
+++ b/package.json
@@ -53,5 +53,8 @@
     "typechain": "^8.0.0",
     "typescript": "^4.6.3"
   },
-  "packageManager": "yarn@3.2.0"
+  "packageManager": "yarn@3.2.0",
+  "dependencies": {
+    "axios": "^0.27.2"
+  }
 }
