--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
     "@types/chai": "^4.3.1",
+    "@types/inquirer": "^8.2.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.25",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
@@ -48,14 +49,11 @@
     "ethereumjs-utils": "^5.2.5",
     "ethers": "5.6.8",
     "hardhat": "2.9.7",
+    "inquirer": "^8.2.4",
     "mocha": "^9.2.2",
     "ts-mocha": "^9.0.2",
     "typechain": "^8.0.0",
     "typescript": "^4.6.3"
   },
-  "packageManager": "yarn@3.2.0",
-  "dependencies": {
-    "@types/inquirer": "^8.2.1",
-    "inquirer": "^8.2.4"
-  }
+  "packageManager": "yarn@3.2.0"
 }
