--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "crosschain"
   ],
   "scripts": {
-    "compile": "yarn workspaces foreach -pv run compile",
     "clean": "yarn workspaces foreach -pv run clean",
-    "lint": "npx eslint . --ext .js,.ts",
+    "compile": "yarn workspaces foreach -pv run compile",
     "lint:fix": "npx eslint . --ext .js,.ts --fix",
+    "lint": "npx eslint . --ext .js,.ts",
+    "slither": "npx ts-node ./scripts/slither.ts",
     "test": "yarn workspaces foreach -ptv run test"
   },
   "devDependencies": {
@@ -52,6 +53,7 @@
     "inquirer": "^8.2.4",
     "mocha": "^9.2.2",
     "ts-mocha": "^9.0.2",
+    "ts-node": "10.8.1",
     "typechain": "^8.0.0",
     "typescript": "^4.6.3"
   },
