--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "crosschain"
   ],
   "scripts": {
-    "compile": "yarn workspaces foreach -pv run compile",
     "clean": "yarn workspaces foreach -pv run clean",
-    "lint": "npx eslint . --ext .js,.ts",
+    "compile": "yarn workspaces foreach -pv run compile",
     "lint:fix": "npx eslint . --ext .js,.ts --fix",
+    "lint": "npx eslint . --ext .js,.ts",
+    "slither": "npx ts-node ./scripts/slither.ts",
     "test": "yarn workspaces foreach -ptv run test"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
     "@types/chai": "^4.3.1",
+    "@types/inquirer": "^8.2.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.25",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
@@ -49,8 +51,10 @@
     "ethereumjs-utils": "^5.2.5",
     "ethers": "5.6.8",
     "hardhat": "2.9.7",
+    "inquirer": "^8.2.4",
     "mocha": "^9.2.2",
     "ts-mocha": "^9.0.2",
+    "ts-node": "10.8.1",
     "typechain": "^8.0.0",
     "typescript": "^4.6.3"
   },
