--- a/packages/protocol-contracts/package.json
+++ b/packages/protocol-contracts/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.5.0",
     "@uniswap/v2-periphery": "1.1.0-beta.0",
+    "@uniswap/v3-periphery": "1.1.0",
     "ethers": "5.6.8"
   }
 }
