--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
+    "eslint-plugin-sort-keys-fix": "1.1.2",
+    "eslint-plugin-typescript-sort-keys": "2.1.0",
     "ethereum-waffle": "^3.4.4",
     "ethereumjs-utils": "^5.2.5",
     "ethers": "5.6.8",
