--- a/packages/example-contracts/package.json
+++ b/packages/example-contracts/package.json
@@ -24,7 +24,7 @@
     "tsconfig-paths": "^3.14.1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.5.0",
+    "@openzeppelin/contracts": "4.6.0",
     "@uniswap/v2-periphery": "1.1.0-beta.0",
     "@zetachain/addresses": "workspace:^",
     "@zetachain/protocol-contracts": "workspace:^",
