--- a/packages/end-to-end-testing/.env.example
+++ b/packages/end-to-end-testing/.env.example
@@ -1,14 +1,7 @@
-ALCHEMY_API_KEY=<your-key>
+ZETA_NETWORK=<ZETA_NETWORK>
 
-PUBLIC_KEY_1=<a-public-key>
+PRIVATE_KEY=<PRIVATE_KEY>
 
-PRIVATE_KEY=<your-private-key>
+ALCHEMY_API_KEY=<ALCHEMY_API_KEY>
 
-# ETHER
-ETHERSCAN_API_KEY=<...>
-
-# POLYGON
-POYLGONSCAN_API_KEY=<...>
-
-# BSC
-BSCSCAN_API_KEY=<...>
+MORALIS_API_KEY=<MORALIS_API_KEY>
