--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "lint:fix": "npx eslint . --ext .js,.ts --fix",
     "lint": "npx eslint . --ext .js,.ts",
     "slither": "npx ts-node ./scripts/slither.ts",
-    "test": "yarn workspaces foreach -ptv run test"
+    "test": "yarn workspaces foreach -ptv run test",
+    "g:changeset": "changeset",
+    "g:release": "yarn changeset publish"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.23.1",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "3.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
