--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
         id: changesets
         uses: changesets/action@v1
         with:
-          # This expects you to have a script called release which does a build for your packages and calls changeset publish
+          # This expects you to have a script called g:release which does a build for your packages and calls changeset publish
           publish: yarn g:release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
