--- a/packages/protocol-contracts/package.json
+++ b/packages/protocol-contracts/package.json
@@ -1,7 +1,12 @@
 {
   "name": "@zetachain/protocol-contracts",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "license": "MIT",
+  "author": "zetachain",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "scripts": {
     "clean": "npx hardhat clean",
     "compile": "npx hardhat compile",
