--- a/packages/example-contracts/.env.example
+++ b/packages/example-contracts/.env.example
@@ -12,3 +12,6 @@ POYLGONSCAN_API_KEY=<...>
 
 # BSC
 BSCSCAN_API_KEY=<...>
+
+# Deployer address. This is needed to calculate salt in deterministic deployments
+DEPLOYER_ADDRESS=
