--- a/packages/addresses/package.json
+++ b/packages/addresses/package.json
@@ -2,6 +2,7 @@
   "name": "@zetachain/addresses",
   "version": "0.0.1",
   "license": "MIT",
+  "private": "true",
   "author": "zetachain",
   "publishConfig": {
     "access": "public",
