--- a/packages/addresses-node/package.json
+++ b/packages/addresses-node/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "@zetachain/addresses",
-  "version": "0.0.2",
+  "name": "@zetachain/addresses-node",
+  "version": "0.0.1",
   "license": "MIT",
   "author": "zetachain",
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
+  "main": "src/index.ts",
   "scripts": {
     "tsc:watch": "npx tsc --watch"
   }
