--- a/packages/example-contracts/package.json
+++ b/packages/example-contracts/package.json
@@ -35,6 +35,7 @@
     "@zetachain/addresses": "workspace:^",
     "@zetachain/addresses-tools": "workspace:^",
     "@zetachain/protocol-contracts": "workspace:^",
+    "@zetachain/interfaces": "workspace:^",
     "ethers": "5.6.8"
   }
 }
