--- a/packages/example-contracts/tsconfig.json
+++ b/packages/example-contracts/tsconfig.json
@@ -7,7 +7,8 @@
     "baseUrl": ".",
     "paths": {
       "@zetachain/addresses": ["../addresses/src/index"],
-      "@zetachain/addresses/*": ["../addresses/src/*"]
+      "@zetachain/addresses/*": ["../addresses/src/*"],
+      "@zetachain/interfaces": ["../interfaces/src/index"]
     }
   }
 }
