--- a/packages/example-contracts/package.json
+++ b/packages/example-contracts/package.json
@@ -34,6 +34,7 @@
     "@uniswap/v2-periphery": "1.1.0-beta.0",
     "@zetachain/addresses": "workspace:^",
     "@zetachain/addresses-tools": "workspace:^",
+    "@zetachain/interfaces": "workspace:^",
     "@zetachain/protocol-contracts": "workspace:^",
     "ethers": "5.6.8"
   }
