--- a/packages/example-contracts/package.json
+++ b/packages/example-contracts/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "4.6.0",
     "@uniswap/v2-periphery": "1.1.0-beta.0",
+    "@uniswap/v3-periphery": "1.1.0",
     "@zetachain/addresses": "workspace:^",
     "@zetachain/addresses-tools": "workspace:^",
     "@zetachain/interfaces": "workspace:^",
