--- a/packages/example-contracts/package.json
+++ b/packages/example-contracts/package.json
@@ -30,6 +30,7 @@
     "tsconfig-paths": "^3.14.1"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.4.1",
     "@openzeppelin/contracts": "4.6.0",
     "@uniswap/v2-periphery": "1.1.0-beta.0",
     "@zetachain/addresses": "workspace:^",
