--- a/packages/addresses/package.json
+++ b/packages/addresses/package.json
@@ -7,21 +7,24 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
-  "main": "./dist/zetachain-addresses.js",
-  "types": "./dist/zetachain-addresses.d.ts",
+  "main": "./dist/zetachain-addresses.umd.js",
+  "module": "./dist/zetachain-addresses.mjs",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
+  "exports": {
+    ".": {
+      "import": "./dist/zetachain-addresses.mjs",
+      "require": "./dist/zetachain-addresses.umd.cjs"
+    }
+  },
   "scripts": {
     "tsc:watch": "npx tsc --watch",
-    "prepublishOnly": "webpack --mode=production"
+    "prepublishOnly": "vite build"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.13",
-    "babel-loader": "^8.2.5",
-    "clean-webpack-plugin": "^4.0.0",
-    "ts-loader": "^9.3.1",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "vite": "^3.1.0",
+    "vite-plugin-dts": "^1.4.1"
   }
 }
