Fix npm packages to be used externally (#47)
* Fix npm packages to be used in external

* add babel and type files

* update readme file

* Update packages/addresses/README.md

Co-authored-by: Lucas <ljanon@gmail.com>

* Update packages/addresses/README.md

Co-authored-by: Lucas <ljanon@gmail.com>

* update readme

* move to vite

* update version

* Update packages/addresses/.npmignore

Co-authored-by: Lucas <ljanon@gmail.com>

* Update packages/addresses/.npmignore

Co-authored-by: Lucas <ljanon@gmail.com>

* Update packages/addresses/tsconfig.json

Co-authored-by: Lucas <ljanon@gmail.com>

* update errors

* Update packages/addresses/package.json

Co-authored-by: Lucas <ljanon@gmail.com>

Co-authored-by: Lucas <ljanon@gmail.com>

--- a/packages/addresses/package.json
+++ b/packages/addresses/package.json
@@ -1,14 +1,30 @@
 {
   "name": "@zetachain/addresses",
-  "version": "0.0.4",
+  "version": "0.0.8",
   "license": "MIT",
   "author": "zetachain",
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
-  "main": "src/index.ts",
+  "main": "./dist/zetachain-addresses.umd.js",
+  "module": "./dist/zetachain-addresses.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/zetachain-addresses.mjs",
+      "require": "./dist/zetachain-addresses.umd.js"
+    }
+  },
   "scripts": {
-    "tsc:watch": "npx tsc --watch"
+    "tsc:watch": "npx tsc --watch",
+    "prepublishOnly": "vite build"
+  },
+  "devDependencies": {
+    "vite": "^3.1.0",
+    "vite-plugin-dts": "^1.4.1"
   }
 }
