Bug smart contracts script zeta swap deploy

--- a/packages/protocol-contracts/.env.example
+++ b/packages/protocol-contracts/.env.example
@@ -1,4 +1,5 @@
-ALCHEMY_API_KEY=<your-key>
+ALCHEMY_API_KEY_MAINNET=<your-key>
+ALCHEMY_API_KEY_GOERLI=<your-key>
 
 PRIVATE_KEY=<YOUR-PRIVATE-KEY-WITHOUT-0x>
 
