--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - cicd/docker-build
+      - cicd/build-docker
   pull_request:
     branches:
       - main
