Added script for auto generating simple env

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "slither": "npx ts-node ./scripts/slither.ts",
     "test": "yarn workspaces foreach -ptv run test",
     "g:changeset": "changeset",
-    "g:release": "yarn changeset publish"
+    "g:release": "yarn changeset publish",
+    "create-simple-env": "node ./scripts/create-simple-env.js"
   },
   "devDependencies": {
     "@changesets/cli": "^2.23.1",
