--- a/.github/actions/build-docker-images/action.yml
+++ b/.github/actions/build-docker-images/action.yml
@@ -41,8 +41,7 @@ runs:
     - name: Build, tag, and push images
       shell: bash
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         GHCR_REGISTRY: ghcr.io/zeta-chain
       run: |
-        docker build -f $DOCKER_FILENAME -t $ECR_REGISTRY/$REPOSITORY_NAME:$IMAGE_TAG -t $GHCR_REGISTRY/$REPOSITORY_NAME:$IMAGE_TAG .
+        docker build -f $DOCKER_FILENAME -t $GHCR_REGISTRY/$REPOSITORY_NAME:$IMAGE_TAG .
         docker push $GHCR_REGISTRY/$REPOSITORY_NAME:$IMAGE_TAG
