Cicd/Build docker (#77)
* Fixed Dockerfile and added build step

* Added script for auto generating simple env

* Fixed docker tag and updated script to include faucet

* Updated package.json with new command

* renamed tutorial-setup

* Setup script generated wallet now persists

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ node_modules
 !.yarn/sdks
 !.yarn/versions
 
+
 # Hardhat
 artifacts
 typechain-types
@@ -20,8 +21,12 @@ tsconfig.tsbuildinfo
 # Misc
 .env
 .DS_Store
+.secrets
+.wallet.json
 
 # Slither
 scripts/slither-results/*
 !scripts/slither-results/.gitkeep
+
+
 
