--- a/packages/addresses-tools/package.json
+++ b/packages/addresses-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zetachain/addresses-tools",
-  "version": "0.0.1",
+  "version": "0.0.5",
   "license": "MIT",
   "author": "zetachain",
   "publishConfig": {
@@ -9,7 +9,8 @@
   },
   "main": "src/index.ts",
   "scripts": {
-    "tsc:watch": "npx tsc --watch"
+    "tsc:watch": "npx tsc --watch",
+    "prepublishOnly": "npx tsc"
   },
   "devDependencies": {
     "@zetachain/addresses": "workspace:^"
