--- a/packages/interfaces/package.json
+++ b/packages/interfaces/package.json
@@ -8,6 +8,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "scripts": {
+    "prepublishOnly": "echo 'This package is not meant to be published.' && exit 1",
     "tsc:watch": "npx tsc --watch"
   }
 }
