--- a/packages/example-contracts/package.json
+++ b/packages/example-contracts/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "clean": "npx hardhat clean",
     "compile": "npx hardhat compile",
-    "prepublishOnly": "echo 'This package has no prepublishOnly tasks.' && exit 1",
+    "prepublishOnly": "echo 'This package has no prepublishOnly tasks.'",
     "multi-chain-swap:deploy-local": "ZETA_NETWORK=troy EXECUTE_PROGRAMMATICALLY=true npx hardhat run scripts/multi-chain-swap/deploy.ts --network hardhat",
     "multi-chain-swap:deploy": "ZETA_NETWORK=athens EXECUTE_PROGRAMMATICALLY=true npx hardhat run scripts/multi-chain-swap/deploy.ts",
     "lint:fix": "npm run lint:js:fix && npm run lint:sol:fix",
