Add prepublishonly to addressestools 2 (#85)
* Add prepublishonly to addressestools 2

* update text

* remove exit 1

--- a/packages/zeta-app-contracts/package.json
+++ b/packages/zeta-app-contracts/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "clean": "npx hardhat clean",
     "compile": "npx hardhat compile",
+    "prepublishOnly": "echo 'This package has no prepublishOnly tasks.'",
     "lint:fix": "npm run lint:js:fix && npm run lint:sol:fix",
     "lint:js:fix": "eslint --ext .js,.ts . --fix",
     "lint:js": "eslint --ext .js,.ts .",
