--- a/packages/protocol-contracts/package.json
+++ b/packages/protocol-contracts/package.json
@@ -11,6 +11,7 @@
     "clean": "npx hardhat clean",
     "compile": "npx hardhat compile",
     "deploy": "EXECUTE_PROGRAMMATICALLY=true npx hardhat run scripts/deploy.ts",
+    "prepublishOnly": "echo 'This package has no prepublishOnly tasks.'",
     "deploy-local": "ZETA_NETWORK=troy EXECUTE_PROGRAMMATICALLY=true npx hardhat run scripts/deploy.ts --network hardhat",
     "lint:fix": "npm run lint:js:fix && npm run lint:sol:fix",
     "lint:js:fix": "eslint --ext .js,.ts . --fix",
