--- a/packages/example-contracts/package.json
+++ b/packages/example-contracts/package.json
@@ -37,7 +37,7 @@
     "@zetachain/addresses": "workspace:^",
     "@zetachain/addresses-tools": "workspace:^",
     "@zetachain/interfaces": "workspace:^",
-    "@zetachain/protocol-contracts": "workspace:^",
+    "@zetachain/protocol-contracts": "^0.0.3",
     "ethers": "5.6.8"
   }
 }
