--- a/packages/zevm-example-contracts/package.json
+++ b/packages/zevm-example-contracts/package.json
@@ -29,11 +29,11 @@
     "tsconfig-paths": "^3.14.1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "4.7.3",
+    "@openzeppelin/contracts": "^4.8.3",
     "@uniswap/v2-periphery": "1.1.0-beta.0",
     "@zetachain/addresses": "workspace:^",
     "@zetachain/addresses-tools": "workspace:^",
-    "@zetachain/protocol-contracts": "^0.0.4",
+    "@zetachain/protocol-contracts": "^0.0.6",
     "ethers": "5.6.8"
   }
 }
