--- a/packages/addresses/package.json
+++ b/packages/addresses/package.json
@@ -1,23 +1,18 @@
 {
   "name": "@zetachain/addresses",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "license": "MIT",
   "author": "zetachain",
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
-  "main": "./dist/zetachain-addresses.umd.js",
-  "module": "./dist/zetachain-addresses.mjs",
-  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
+  "main": "",
   "exports": {
-    ".": {
-      "import": "./dist/zetachain-addresses.mjs",
-      "require": "./dist/zetachain-addresses.umd.js"
-    }
+    ".": "./dist/index.js"
   },
   "scripts": {
     "tsc:watch": "npx tsc --watch",
