Deploy send contract to Athens3

--- a/packages/addresses-tools/package.json
+++ b/packages/addresses-tools/package.json
@@ -18,6 +18,7 @@
     "prepublishOnly": "npx tsc"
   },
   "devDependencies": {
-    "@zetachain/addresses": "workspace:^"
+    "@zetachain/addresses": "workspace:^",
+    "@zetachain/protocol-contracts": "^1.0.1-athens3"
   }
 }
