feat: ci to zetachain repo (#137)
* feat: ci to zetachain repo

* remove unsed code

* update test

* remove old code

* update yaml

* remove unused code

--- a/packages/zeta-app-contracts/tsconfig.json
+++ b/packages/zeta-app-contracts/tsconfig.json
@@ -1,14 +1,20 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["./scripts", "./lib", "./test", "./tests", "./typechain", "./**/*.json", "typechain-types"],
-  "exclude": ["artifacts", "cache"],
-  "files": ["./hardhat.config.ts"],
+  "include": [
+    "./scripts",
+    "./lib",
+    "./test",
+    "./tests",
+    "./typechain",
+    "./**/*.json",
+    "typechain-types"
+  ],
+  "exclude": [
+    "artifacts",
+    "cache",
+    "hardhat.config.ts",
+  ],
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@zetachain/addresses": ["../addresses/src/index"],
-      "@zetachain/addresses/*": ["../addresses/src/*"],
-      "@zetachain/interfaces": ["../interfaces/src/index"]
-    }
+    "baseUrl": "."
   }
 }
