--- a/packages/zeta-app-contracts/package.json
+++ b/packages/zeta-app-contracts/package.json
@@ -2,7 +2,7 @@
   "name": "@zetachain/zeta-app-contracts",
   "version": "0.0.1",
   "license": "MIT",
-  "private": true,
+  "private": false,
   "author": "zetachain",
   "publishConfig": {
     "access": "public",
