--- a/packages/zevm-app-contracts/package.json
+++ b/packages/zevm-app-contracts/package.json
@@ -1,13 +1,19 @@
 {
   "name": "@zetachain/zevm-app-contracts",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "MIT",
-  "private": true,
+  "private": false,
   "author": "zetachain",
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
+  "files": [
+    "contracts",
+    "data",
+    "scripts",
+    "typechain-types"
+  ],
   "scripts": {
     "clean": "npx hardhat clean",
     "compile": "npx hardhat compile",
