--- a/packages/zevm-app-contracts/package.json
+++ b/packages/zevm-app-contracts/package.json
@@ -37,7 +37,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "4.9.3",
     "@uniswap/v2-periphery": "1.1.0-beta.0",
-    "@zetachain/networks": "^4.0.0-rc1",
+    "@zetachain/networks": "^4.0.0",
     "@zetachain/protocol-contracts": "^4.0.1",
     "ethers": "5.6.8"
   }
