--- a/packages/zevm-app-contracts/package.json
+++ b/packages/zevm-app-contracts/package.json
@@ -38,6 +38,7 @@
     "@uniswap/v2-periphery": "1.1.0-beta.0",
     "@zetachain/networks": "^4.0.0",
     "@zetachain/protocol-contracts": "^4.0.1",
+    "@zetachain/toolkit": "^5.0.0",
     "ethers": "5.6.8"
   }
 }
