--- a/packages/zevm-app-contracts/package.json
+++ b/packages/zevm-app-contracts/package.json
@@ -39,7 +39,6 @@
     "@openzeppelin/hardhat-upgrades": "^1.7.0-rc.0",
     "@uniswap/v2-periphery": "1.1.0-beta.0",
     "@zetachain/networks": "^4.0.0",
-    "@zetachain/protocol-contracts": "^4.0.1",
-    "ethers": "5.6.8"
+    "@zetachain/protocol-contracts": "^4.0.1"
   }
 }
