feat: deploy instant rewards to athens

--- a/.github/workflows/publish-npm.yaml
+++ b/.github/workflows/publish-npm.yaml
@@ -40,6 +40,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_REF: ${{ github.ref }}
+        continue-on-error: true
 
       - name: Determine NPM Tag zevm app contracts
         id: determine-npm-tag-zevm-app-contracts
